# lancerrender

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  get-sdl2.ps1
Obj2Header/: Obj2Header.sln  README.md
Obj2Header/Obj2Header/: Program.cs
lancerrender/: CMakeLists.txt
lancerrender/gl/: glad.c
lancerrender/gl/glad/: glad.h
lancerrender/include/: lancerrender.h  lancerrender_img.h  lancerrender_shaderfile.h
lancerrender/src/: lancerrender.c  lr_2d.c  lr_2d.h  lr_blockalloc.c  lr_blockalloc.h  lr_context.h  lr_dds.c  lr_dynamicdraw.c  lr_dynamicdraw.h  lr_errors.h  lr_fnv1a.h  lr_geometry.c  lr_geometry.h  lr_material.c  lr_material.h  lr_rendertarget.c  lr_rendertarget.h  lr_shader.c  lr_shader.h  lr_shaderfile.c  lr_sort.c  lr_string.h  lr_texture.c  lr_texture.h  lr_ubo.c  lr_ubo.h  lr_vector.h  s3tc.c  s3tc.h  shader2d_fragment.frag  shader2d_vertex.vert
lancerrender/txt2h/: binary.c  binary.h  main.cpp
lrshadertool/: CMakeLists.txt  gl2spv.cpp  gl2spv.h  main.cpp  miniz.h  platform.cpp  platform.h  resourcelimits.cpp  shfile.cpp  shfile.h
testapp/: CMakeLists.txt  alphatex.bgra5551  billboard.glsl  dds.c  dds.h  dxt5.dds  main.c  monkeyshader.glsl  stb_image.h  suzanne.h
